Closed
Bug 109039
Opened 24 years ago
Closed 24 years ago
Mayscript attribute needed on <OBJECT> tag; this is not HTML4 compliant
Categories
(Core Graveyard :: Plug-ins, defect, P3)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.7
People
(Reporter: Magnus.Kessler, Assigned: peterlubczynski-bugs)
References
()
Details
(Keywords: topembed, Whiteboard: [Also verify fix against testcase in duplicate bug 121529])
Attachments
(1 file, 1 obsolete file)
9.85 KB,
patch
|
serhunt
:
review+
beard
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.5+)
Gecko/20011107
BuildID: 20011110703
For LiveConnect to work correctly, one needs to set the mayscript attribute on
the object tag. Just setting it as a parameter is not sufficient. The mayscript
attribute of the object tag is not part of the HTML4 specs.
Reproducible: Always
Example (taken from http://www.hubick.com/software/Misc/LiveConnect/test3.htm):
<object name="TestApplet" id="TestApplet"
classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" width="300" height="100"
codebase="j2re1_3_0-win.exe#Version=1,3,0,0" mayscript="true" scriptable="true">
<param name="type" value="application/x-java-applet;version=1.3"/>
<param name="mayscript" value="true"/>
<param name="scriptable" value="true"/>
<param name="code" value="Test3Applet"/>
</object><br/>
Notice the mayscript attribute on the object tag above. The code above works fine.
Leaving out the attribute (see below) on the object tag causes an Exception in
the applet. However, this version is validated correct HTML 4.01
<object name="TestApplet" id="TestApplet"
classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" width="300" height="100"
codebase="j2re1_3_0-win.exe#Version=1,3,0,0">
<param name="type" value="application/x-java-applet;version=1.3"/>
<param name="mayscript" value="true"/>
<param name="scriptable" value="true"/>
<param name="code" value="Test3Applet"/>
</object><br/>
![]() |
||
Comment 1•24 years ago
|
||
over to liveconnect
Assignee: joe.chou → rogerl
Status: UNCONFIRMED → NEW
Component: OJI → Live Connect
Ever confirmed: true
QA Contact: pmac → pschwartau
Comment 2•24 years ago
|
||
--> OJI
I'm not expert in these matters, but cc'ing gary.kind@oracle.com
because of his comment about |mayscript| in bug 60018.
Also see bug 75588:
Exception thrown (for mayscript) when JSObject.getWindow() called in JAVA applet
This was marked invalid, but in fact is really a duplicate of bug 80802:
LiveConnect for HTML4 OBJECT tag currently not supported
(which has just recently been fixed)
Was support for |mayscript| omitted in this fix?
Assignee: rogerl → joe.chou
Component: Live Connect → OJI
QA Contact: pschwartau → pmac
Updated•24 years ago
|
Summary: Mayscript attribute needed on object tag; this is not html 4 compliant → Mayscript attribute needed on <OBJECT> tag; this is not HTML4 compliant
Assignee | ||
Comment 3•24 years ago
|
||
This is a plugin bug...over to me.
MAYSCRIPT isn't the one attribute we need to fix. There are a few getters,
besides GetMayScript(), in nsPluginInstanceOwner that are incorrect.
Assignee: joe.chou → peterlubczynski
Component: OJI → Plug-ins
Priority: -- → P3
Target Milestone: --- → mozilla0.9.7
Assignee | ||
Comment 4•24 years ago
|
||
There is a typo in the patch: you use "NAME" in GetCode(). Otherwise looks good.
Assignee | ||
Comment 6•24 years ago
|
||
Made that change and also fixed the PRLOG problem with fNPP. Please review.
Attachment #57331 -
Attachment is obsolete: true
Comment on attachment 57767 [details] [diff] [review]
clean-up patch
r=av
Attachment #57767 -
Flags: review+
Comment 8•24 years ago
|
||
Comment on attachment 57767 [details] [diff] [review]
clean-up patch
sr=beard
Attachment #57767 -
Flags: superreview+
Assignee | ||
Comment 9•24 years ago
|
||
Patch checked into the trunk, marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 11•24 years ago
|
||
Nominating for the 0.9.4 branch as this fixes "mayscript" when using Java
through the object tag and fixes the failing testcase in bug 80802.
Keywords: mozilla0.9.4
Assignee | ||
Comment 12•24 years ago
|
||
*** Bug 121529 has been marked as a duplicate of this bug. ***
Comment 13•24 years ago
|
||
When this bug is verified, also check this testcase from bug 121529:
http://www.ccs.neu.edu/home/bcortez/mozilla_tests/80802/bug_test.html
Whiteboard: [Also verify fix against testcase in duplicate bug 121529]
Assignee | ||
Updated•24 years ago
|
Keywords: mozilla0.9.4
Comment 15•24 years ago
|
||
Since this's been nominated for edt0.9.4, I'm reopening this bug. This bug is
already fixed in the commercial trunk build.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 16•24 years ago
|
||
um...if a bug is fixed in the trunk, then it should be marked FIXED, no?
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 17•24 years ago
|
||
Comment on attachment 57767 [details] [diff] [review]
clean-up patch
This should be pushed to the 0.9.4 branch because it does the proper mapping of
various <EMBED> attributes to parameters when the <OBJECT> element is in use.
Otherwise, LiveConnect won't work properly (MAYSCRIPT) with <OBJECT> elements.
Comment 18•24 years ago
|
||
Jud -- I am inclined to plus this for 094 based on Patrick's comment. Please
respond as appropriate.
Comment 19•24 years ago
|
||
per conversation w/ beard. minusing this for 0.9.4
Comment 20•24 years ago
|
||
Verified on the commercial trunk:(2002-01-31-06-trunk)
Status: RESOLVED → VERIFIED
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•